--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ plugins {
     id 'application'
     id 'org.springframework.boot' version '2.7.0'
     id 'io.spring.dependency-management' version '1.1.0'
-    id 'org.jetbrains.kotlin.jvm' version '1.7.10'
-    id 'org.jetbrains.kotlin.plugin.spring' version '1.7.10'
+    id 'org.jetbrains.kotlin.jvm' version '1.6.10'
+    id 'org.jetbrains.kotlin.plugin.spring' version '1.6.10'
 }
 
 ext {
@@ -23,7 +23,7 @@ version = '0.0.1'
 mainClassName = 'io.github.kongpf8848.azure.AzureOpenaiProxyApplicationKt'
 
 java {
-    sourceCompatibility = '11'
+    sourceCompatibility = JavaVersion.VERSION_1_8
 }
 
 configurations {
@@ -54,7 +54,7 @@ dependencies {
 tasks.withType(KotlinCompile) {
     kotlinOptions {
         freeCompilerArgs += '-Xjsr305=strict'
-        jvmTarget = '11'
+        jvmTarget = JavaVersion.VERSION_1_8
     }
 }
 
