--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,7 @@ azure:
     endpoint: ${AZURE_OPENAI_ENDPOINT:https://xxx.openai.azure.com/}
     deployment_id: ${AZURE_OPENAI_DEPLOYMENT_ID:xxx}
     api_version: ${AZURE_OPENAI_API_VERSION:2023-03-15-preview}
+    api_delay_ms: ${AZURE_OPENAI_API_DELAY:50}
 spring:
   application:
     name: ${APP_NAME:azure-openai-proxy}
